refactor(backtest,market-data,trading): 非安全路徑判空改用 StringUtils
批次 2/5:9 處字串判空改用 StringUtils(code-standards「字串 null + blank」規則)。
本批刻意只含非安全敏感檔案,安全路徑(JwtService / SecurityConfig /
RefreshTokenService / AuthController / BrowserAuthCookie*)留待批次 3 逐處審視。

- ClientIpResolver:`remoteAddr == null || isBlank ? UNKNOWN : remoteAddr`
  → StringUtils.defaultIfBlank(單一運算式取代三元)
- BacktestEngineInput / BacktestService(2)/ WsMessageParser / TradeType → isBlank
- JdbcBacktestRepository / BacktestMapper / TradingService → isNotBlank

TradeType 於 Phase 3 曾因「不擴大 scope」而暫留,本重構分支正是其歸屬處。

驗證:./mvnw -pl stock-start -am verify → 80 tests, 0 failures(行為不變)。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>